# Cmake_study

./: CMakeLists.txt
1.0Cmake/: main.c
1.0Cmake/include/: hello.h
2.0Cmake/: CMakeLists.txt  main.c
3.0Cmake/: CMakeLists.txt  main.c
4.0Cmake/: CMakeLists.txt  main.c
src/: hello.c
